@@ -161,12 +161,16 @@ dit(bf(tt(-x)))
    Writes the transferred data not only to their target streams, but also to
    stderr. The output format is hexadecimal, prefixed with "> " or "< "
    indicating flow directions. Can be combined with code(-v).
-dit(bf(tt(-r <file>)))
+label(option_r)dit(bf(tt(-r <file>)))
    Dumps the raw (binary) data flowing from left to right address to the given
-   file.
+   file. The file name may contain references to environment variables and
+   code($$) (pid), code($PROGNAME) (see option link(option -lp)(option_lp)),
+   code($TIMESTAMP) (uses format %Y%m%dT%H%M%S), and code(MICROS) (microseconds
+   of daytime). These references have to be protected from shell expansion of
+   course.
 dit(bf(tt(-R <file>)))
    Dumps the raw (binary) data flowing from right to left address to the given
-   file.
+   file. See link(option -r)(option_r) for customization of file name.
 label(option_b)dit(bf(tt(-b))tt(<size>))
    Sets the data transfer block <size> [link(size_t)(TYPE_SIZE_T)].
    At most <size> bytes are transferred per step. Default is 8192 bytes. 
