@@ -113,5 +113,6 @@ extern int xiosetenvushort(const char *varname, unsigned short value,
 extern unsigned long int Strtoul(const char *nptr, char **endptr, int base, const char *txt);
 extern long long int Strtoll(const char *nptr, char **endptr, int base, const char *txt);
 extern double Strtod(const char *nptr, char **endptr, const char *txt);
+extern int xio_opensnifffile(const char *a, struct timeval *tv);
 
 #endif /* !defined(__sysutils_h_included) */
